--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   http: ^0.13.4
   another_flushbar: ^1.10.29
   provider: ^6.0.3
+  # responsive_sizer: ^3.0.8
+  flutter_sizer: ^1.0.5
 
 dev_dependencies:
   flutter_test:
